call Applet::sceneEventFilter; otherwise applet handles are broken on Applets that are also Containments

BUG:277467